<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >
            <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp" >
 
                <TextView
                    android:id="@+id/console"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempstring"
                    android:textColor="#008000"
                    android:textSize="16sp" 
                    android:singleLine="false"
    				android:scrollbars="vertical"
    				android:fadeScrollbars="false"/>
            </ScrollView>

		<com.find.coolhosts.LoadingButton
        android:id="@+id/onekey"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        />
            
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/bottomTopinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ad"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/plus"
                android:text="@string/ad" />

            <Button
                android:id="@+id/customehosts"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/customhostsource"
                android:text="@string/customhostsaddress" />

            <Button
                android:id="@+id/readfromfile"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/readfromfile"
                android:text="@string/readfromfile" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomBottominner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/clearHosts"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/deletehosts"
                android:text="@string/emptyhosts" />

            <Button
                android:id="@+id/help"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/help"
                android:text="@string/help" />

            <Button
                android:id="@+id/more"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/more"
                android:text="@string/more" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>